added integration tests for persistence package